--- a/flask_mysql/templates/index.html
+++ b/flask_mysql/templates/index.html
@@ -11,15 +11,6 @@
     />
   </head>
   <body>
-    <h1>Simple Form</h1>
-    <form method="POST">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required /><br /><br />
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required /><br /><br />
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" required></textarea><br /><br />
-      <input type="submit" value="Submit" />
-    </form>
+    <div class="caixa">aaaaaaaaaaaa</div>
   </body>
 </html>
