--- a/flask_mysql/templates/index.html
+++ b/flask_mysql/templates/index.html
@@ -1,16 +1,16 @@
-<!-- FILEPATH: /c:/Users/Aluno/Downloads/Docker_Flask_MySQL/flask_mysql/templates/index.html -->
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Form</title>
-    <!--style.css-->
+    <meta charset="UTF-8" />
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='style.css') }}"
+      href="{{ url_for('static', filename= 'css/style.css') }}"
     />
+    <title>FlaskBlog</title>
   </head>
+
   <body>
-    <div class="caixa">aaaaaaaaaaaa</div>
+    <div class="caixa">aaaaaaaaaaaaaaaaa</div>
+    <script src="" async defer></script>
   </body>
 </html>
