--- a/flask_mysql/staticFiles/css/style.css
+++ b/flask_mysql/staticFiles/css/style.css
@@ -1,40 +1,8 @@
-/* FILEPATH: /c:/Users/Aluno/Downloads/Docker_Flask_MySQL/flask_mysql/static/styles.css */
 
-/* Styles for screens smaller than 768px */
-@media (max-width: 767px) {
-    /* Example styles */
-    .container {
-        width: 100%;
-        padding: 10px;
-    }
-    
-    .menu {
-        display: none;
-    }
-    
-    .content {
-        width: 100%;
-    }
-}
-
-/* Styles for screens larger than 768px */
-@media (min-width: 768px) {
-    /* Example styles */
-    .container {
-        width: 80%;
-        margin: 0 auto;
-    }
-    
-    .menu {
-        display: block;
-        width: 20%;
-        float: left;
-    }
-    
-    .content {
-        width: 80%;
-        float: right;
-    }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 .body {
     background-color: #000000;
